# cryptohack_rs

./: Cargo.toml  README.md  out.txt
src/: a_general.rs  b_mathematics.rs  main.rs
src/a_general/: my_pretty_der.rs
src/b_mathematics/: adrien_sign_minus.py  chinese_theorem.rs  data_binom.py  gaussian_reduction.rs  successive_powers.txt  tonelli_shanks.rs
