[package]
name = "cryptohack_mw"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
base64 = "0.13.0"
num-bigint = "0.4.2"
num-integer = "*"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ultraviolet = { version = "0.8", features = [ "f64", "int" ] }
#asn1 = "*"
der-parser = { version = "6.0", features = ["bigint"] }
x509-signature = "0.5"
rusticata-macros = "*"
byteorder = "*"
num-traits = "*"
lazy_static = "1.4"